# types

./: CMakeLists.txt  README.md
include/types/: string.hpp  types.hpp
include/util/: log.hpp  loginterface.hpp  math.hpp  serialize.hpp  template.hpp
include/util/helper/: stringhelper.hpp
src/: test.cpp
src/util/: log.cpp
